examples/test/testpolicy15971.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy15971
  namespace: namespace257
spec:
  podSelector:
    matchLabels:
      key42: value18
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key9: value5
          key29: value17
          key3: value24
      podSelector:
        matchLabels:
          key29: value20
          key47: value39
          key18: value17
